# lopcore

./: .clang-format  .gitignore  CHANGELOG.md  CMakeLists.txt  CONTRIBUTING.md  Kconfig  LICENSE  README.md  idf_component.yml
.github/workflows/: ci.yml.disabled
docs/: HEADER_STANDARDS.md  MQTT_CLIENTS.md  README.md  STORAGE_REFACTORING_PLAN.md
examples/: README.md
examples/01_basic_logging/: CMakeLists.txt  README.md  main.cpp
examples/01_basic_logging/main/: main.cpp
examples/02_storage_basics/: CMakeLists.txt  README.md  main.cpp
examples/02_storage_basics/main/: CMakeLists.txt  main.cpp
examples/03_state_machine/: CMakeLists.txt  README.md
examples/03_state_machine/main/: CMakeLists.txt  main.cpp
examples/04_mqtt_esp_client/: CMakeLists.txt  README.md
examples/04_mqtt_esp_client/main/: CMakeLists.txt  idf_component.yml  main.cpp
examples/05_mqtt_coremqtt_async/: CMakeLists.txt  README.md  idf_component.yml  partitions.csv  sdkconfig.defaults
examples/05_mqtt_coremqtt_async/main/: main.cpp
examples/06_mqtt_coremqtt_sync/: CMakeLists.txt  README.md  README.md.old
examples/06_mqtt_coremqtt_sync/main/: CMakeLists.txt  main.cpp
include/: lopcore.hpp
include/lopcore/logging/: console_sink.hpp  file_sink.hpp  log_level.hpp  log_sink.hpp  logger.hpp
include/lopcore/mqtt/: coremqtt_client.hpp  esp_mqtt_client.hpp  imqtt_client.hpp  mqtt_budget.hpp  mqtt_client_factory.hpp  mqtt_config.hpp  mqtt_traits.hpp  mqtt_types.hpp
include/lopcore/state_machine/: istate.hpp  state_machine.hpp
include/lopcore/storage/: istorage.hpp  littlefs_storage.hpp  nvs_storage.hpp  sdcard_storage.hpp  spiffs_storage.hpp  storage_config.hpp  storage_factory.hpp  storage_traits.hpp  storage_type.hpp
include/lopcore/tls/: mbedtls_pkcs11_posix.h  mbedtls_transport.hpp  network_context.h  pkcs11_provider.hpp  pkcs11_session.hpp  tls_config.hpp  tls_transport.hpp
src/logging/: console_sink.cpp  file_sink.cpp  logger.cpp
src/mqtt/: coremqtt_client.cpp  esp_mqtt_client.cpp  mqtt_budget.cpp  mqtt_client_factory.cpp
src/storage/: littlefs_storage.cpp  nvs_storage.cpp  sdcard_storage.cpp  spiffs_storage.cpp  storage_factory.cpp
src/tls/: mbedtls_transport.cpp  pkcs11_provider.cpp  pkcs11_session.cpp
src/tls/c_wrappers/: mbedtls_pkcs11_posix.c
test/: CMakeLists.txt  README.md
test/mocks/esp32/: core_mqtt.h  esp_err.h  esp_event.h  esp_log.h  esp_timer.h  esp_tls.h  mqtt_client.h  transport_interface.h
test/mocks/esp32/freertos/: FreeRTOS.h  task.h  timers.h
test/mocks/tls/: mock_tls_transport.hpp
test/unit/: test_dummy.cpp  test_file_sink.cpp  test_littlefs_storage.cpp  test_logger.cpp  test_nvs_storage.cpp  test_spiffs_storage.cpp  test_storage_factory.cpp
test/unit/mqtt/: test_coremqtt_client.cpp  test_coremqtt_client_simple.cpp  test_esp_mqtt_client.cpp  test_mqtt_budget.cpp  test_mqtt_client_factory.cpp  test_mqtt_clients_standalone.cpp  test_mqtt_config.cpp  test_mqtt_operations.cpp  test_mqtt_traits.cpp  test_mqtt_types.cpp
test/unit/state_machine/: test_state_machine.cpp
test/unit/storage/: test_storage_traits.cpp
test/unit/tls/: test_mock_tls_transport.cpp  test_tls_config.cpp
